--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "framer-motion": "^6.2.8",
     "moment": "^2.29.2",
     "react": "^17.0.2",
+    "react-datepicker": "^4.10.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
